--- a/DW/pom.xml
+++ b/DW/pom.xml
@@ -9,6 +9,7 @@
     <artifactId>mysql-connector-java</artifactId>
     <version>8.0.28</version>
 	</dependency>
+
 	<dependency>
     <groupId>org.jsoup</groupId>
     <artifactId>jsoup</artifactId>
@@ -27,8 +28,14 @@
     <artifactId>poi-ooxml</artifactId>
     <version>4.1.2</version> <!-- Phiên bản có thể thay đổi -->
 </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
 
-</dependencies>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
