--- a/UIWarehouse/pom.xml
+++ b/UIWarehouse/pom.xml
@@ -24,6 +24,14 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
     </dependency>
+
+      <dependency>
+        <groupId>com.opencsv</groupId>
+        <artifactId>opencsv</artifactId>
+        <version>5.6</version> <!-- Thay đổi phiên bản theo yêu cầu của bạn -->
+      </dependency>
+
+
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
